# bebop_controller

./: manifest.xml  package.xml
launch/: control2bebops.launch  control_bebop.launch  control_use_mocap.launch  keyboard_controller.launch.bak  test_aruco_bebop.launch
src/: drone_controller_multiple_bebops.py  drone_video_display.py
